aggiunta immagini e rifiniture header

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com"> -->
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
     <title>Hubspot</title>
   </head>
   <body>
@@ -12,14 +15,13 @@
       <div class="first-nav">
         <nav class="container clearfix">
           <div class="fl">
-            <img src="img/mondo.jpg" alt="">
-            <span>English</span>
-            <span>Contact Us</span>
+            <span id="border-right"><a href="https://www.google.com"><i class="fa fa-globe" aria-hidden="true"></i><div class="link-text">English</div><i class="fa fa-angle-down" aria-hidden="true"></i></a></span>
+            <span id="border-left"><a href="https://www.google.com">Contact Us</a></span>
           </div>
           <div class="fr">
-            <img src="img/search.png" alt="">
-            <span class="button button-type-a">Log in</span>
-            <span class="button button-type-b">GetHubspotFree</span>
+            <i class="fa fa-search" aria-hidden="true"></i>
+            <span class="button button-type-a"><a href="https://www.google.com">Log in</a></span>
+            <span class="button button-type-b"><a href="https://www.google.com">GetHubspotFree</a></span>
           </div>
         </nav>
       </div>
@@ -30,20 +32,48 @@
           </div>
           <div class="fr">
             <ul>
-              <li><a href="https://www.google.com">Software</a></li>
+              <li><a href="https://www.google.com"><div class="link-text">Software</div><i class="fa fa-angle-down" aria-hidden="true"></i></a></li>
               <li><a href="https://www.google.com">Pricing</a></li>
-              <li><a href="https://www.google.com">Resources</a></li>
-              <li><a href="https://www.google.com">Partners</a></li>
-              <li><a href="https://www.google.com">About</a></li>
+              <li><a href="https://www.google.com"><div class="link-text">Resources</div><i class="fa fa-angle-down" aria-hidden="true"></i></a></li>
+              <li><a href="https://www.google.com"><div class="link-text">Partners</div><i class="fa fa-angle-down" aria-hidden="true"></i></a></li>
+              <li><a href="https://www.google.com"><div class="link-text">About</div><i class="fa fa-angle-down" aria-hidden="true"></i></a></li>
             </ul>
           </div>
         </nav>
       </div>
+
       <div class="bg">
         <div class="jumbotron container">
           <h1>There's a better way to grow</h1>
-          <h3>Marketing, sales and service software that helps your business grow without compromise. Because "good for the business" should also mean "good for the customee."</h3>
+          <h4>Marketing, sales and service software that helps your business grow without compromise. Because "good for the business" should also mean "good for the customee."</h4>
+          <span class="button button-type-b">GetHubspotFree</span>
+          <h6>Get started with FREE tools, and upgrade as you grow.</h6>
         </div>
+      </div>
+
+      <div class="bg-box">
+        <!-- <div> -->
+          <div class="cube">
+            <img src="img/cubo.png" alt="">
+            <h2>Powerful alone. Better together</h2>
+            <h5>HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its core. They're powerful alone - but even better when used together.</h5>
+          </div>
+
+          <div class="box container clearfix">
+            <div class="first-box fl">
+              <img src="img/libretto.png" alt="">
+              <div>
+                <span class="button button-type-b"><a href="https://www.google.com">Learn More</a></span>
+              </div>
+            </div>
+
+            <div class="second-box fr">
+              <h4>Free HubSpot CRM</h4>
+              <h5>Everything you need to organize, track, and build better relationships with leads and customers. Yes, it's 100% free. Forever.</h5>
+              <span>POPULAR FEATURE</span>
+            </div>
+          </div>
+        <!-- </div> -->
       </div>
     </header>
   </body>
