aggiunte le tre colonne

--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <!-- <link rel="preconnect" href="https://fonts.gstatic.com"> -->
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <title>Hubspot</title>
   </head>
   <body>
@@ -15,11 +14,11 @@
       <div class="first-nav">
         <nav class="container clearfix">
           <div class="fl">
-            <span id="border-right"><a href="https://www.google.com"><i class="fa fa-globe" aria-hidden="true"></i><div class="link-text">English</div><i class="fa fa-angle-down" aria-hidden="true"></i></a></span>
-            <span id="border-left"><a href="https://www.google.com">Contact Us</a></span>
+            <span id="border-right"><a class="a" href="https://www.google.com"><i class="fa fa-globe" aria-hidden="true"></i><div class="link-text">English</div><i class="fa fa-angle-down" aria-hidden="true"></i></a></span>
+            <span id="border-left"><a class="a" href="https://www.google.com">Contact Us</a></span>
           </div>
           <div class="fr">
-            <i class="fa fa-search" aria-hidden="true"></i>
+            <a href="https://www.google.com"><i class="fa fa-search" aria-hidden="true"></i></a>
             <span class="button button-type-a"><a href="https://www.google.com">Log in</a></span>
             <span class="button button-type-b"><a href="https://www.google.com">GetHubspotFree</a></span>
           </div>
@@ -32,11 +31,11 @@
           </div>
           <div class="fr">
             <ul>
-              <li><a href="https://www.google.com"><div class="link-text">Software</div><i class="fa fa-angle-down" aria-hidden="true"></i></a></li>
-              <li><a href="https://www.google.com">Pricing</a></li>
-              <li><a href="https://www.google.com"><div class="link-text">Resources</div><i class="fa fa-angle-down" aria-hidden="true"></i></a></li>
-              <li><a href="https://www.google.com"><div class="link-text">Partners</div><i class="fa fa-angle-down" aria-hidden="true"></i></a></li>
-              <li><a href="https://www.google.com"><div class="link-text">About</div><i class="fa fa-angle-down" aria-hidden="true"></i></a></li>
+              <li><a class="a" href="https://www.google.com"><div class="link-text">Software</div><i class="fa fa-angle-down" aria-hidden="true"></i></a></li>
+              <li><a class="a" href="https://www.google.com">Pricing</a></li>
+              <li><a class="a" href="https://www.google.com"><div class="link-text">Resources</div><i class="fa fa-angle-down" aria-hidden="true"></i></a></li>
+              <li><a class="a" href="https://www.google.com"><div class="link-text">Partners</div><i class="fa fa-angle-down" aria-hidden="true"></i></a></li>
+              <li><a class="a" href="https://www.google.com"><div class="link-text">About</div><i class="fa fa-angle-down" aria-hidden="true"></i></a></li>
             </ul>
           </div>
         </nav>
@@ -52,28 +51,115 @@
       </div>
 
       <div class="bg-box">
-        <!-- <div> -->
+
           <div class="cube">
             <img src="img/cubo.png" alt="">
             <h2>Powerful alone. Better together</h2>
             <h5>HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its core. They're powerful alone - but even better when used together.</h5>
           </div>
 
-          <div class="box container clearfix">
-            <div class="first-box fl">
+          <div class="box-1 container clearfix shadow">
+            <div class="content-1 fl">
               <img src="img/libretto.png" alt="">
-              <div>
-                <span class="button button-type-b"><a href="https://www.google.com">Learn More</a></span>
+              <div class="box-button">
+                <span class="button button-type-b"><a class="a" href="https://www.google.com">Learn More</a></span>
               </div>
             </div>
 
-            <div class="second-box fr">
+            <div class="content-2 fr">
               <h4>Free HubSpot CRM</h4>
-              <h5>Everything you need to organize, track, and build better relationships with leads and customers. Yes, it's 100% free. Forever.</h5>
-              <span>POPULAR FEATURE</span>
+              <p>Everything you need to organize, track, and build better relationships with leads and customers. Yes, it's 100% free. Forever.</p>
+              <h5>POPULAR FEATURE</h5>
+              <div class="content-2-list">
+                <img src="img/check-orange.png" alt="">
+                <span>Contact Insight</span>
+              </div>
+
+              <div class="content-2-list">
+                <img src="img/check-orange.png" alt="">
+                <span>Deals</span>
+              </div>
+
+              <div class="content-2-list">
+                <img src="img/check-orange.png" alt="">
+                <span>Task</span>
+              </div>
+
             </div>
           </div>
-        <!-- </div> -->
+          <div class="box-2 container clearfix">
+            <div class="content-3 fl shadow">
+              <img src="img/marketing-hub.png" alt="">
+              <h4>Marketing Hub</h4>
+              <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaign at scale.</p>
+              <hr>
+              <h5>POPULAR FEATURE</h5>
+
+              <div class="content-3-list">
+                <img src="img/check-orange.png" alt="">
+                <span>Lead Generation</span>
+              </div>
+              <div class="content-3-list">
+                <img src="img/check-orange.png" alt="">
+                <span>Marketing Automation</span>
+              </div>
+              <div class="content-3-list">
+                <img src="img/check-orange.png" alt="">
+                <span>Analytics</span>
+              </div>
+              <div class="content-3-button">
+                <span class="button button-type-b">Learn More</span>
+              </div>
+            </div>
+
+            <div class="content-4 content-3 fl shadow">
+              <img src="img/sales-hub.png" alt="">
+              <h4>Marketing Hub</h4>
+              <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaign at scale.</p>
+              <hr>
+              <h5>POPULAR FEATURE</h5>
+
+              <div class="content-3-list">
+                <img src="img/check-orange.png" alt="">
+                <span>Lead Generation</span>
+              </div>
+              <div class="content-3-list">
+                <img src="img/check-orange.png" alt="">
+                <span>Marketing Automation</span>
+              </div>
+              <div class="content-3-list">
+                <img src="img/check-orange.png" alt="">
+                <span>Analytics</span>
+              </div>
+              <div class="content-3-button">
+                <span class="button button-type-b">Learn More</span>
+              </div>
+            </div>
+            <div class="content-3 fl shadow">
+
+              <img src="img/service-hub.png" alt="">
+              <h4>Marketing Hub</h4>
+              <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaign at scale.</p>
+              <hr>
+              <h5>POPULAR FEATURE</h5>
+
+              <div class="content-3-list">
+                <img src="img/check-orange.png" alt="">
+                <span>Lead Generation</span>
+              </div>
+              <div class="content-3-list">
+                <img src="img/check-orange.png" alt="">
+                <span>Marketing Automation</span>
+              </div>
+              <div class="content-3-list">
+                <img src="img/check-orange.png" alt="">
+                <span>Analytics</span>
+              </div>
+              <div class="content-3-button">
+                <span class="button button-type-b">Learn More</span>
+              </div>
+            </div>
+          </div>
       </div>
     </header>
   </body>
