--- a/index.html
+++ b/index.html
@@ -160,6 +160,64 @@
               </div>
             </div>
           </div>
+
+          <div class="gradient-row">
+            <div class="top-text container">
+              <h2>Learn and grow with award-winning support and a thriving community behind you.</h2>
+              <p>You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>
+            </div>
+
+            <div class="row clearfix container">
+              <div class="block fl bd-bottom bd-right">
+                <img src="img/handshake.svg" alt="">
+                <p>150+</p>
+                <span>HubSpot user groups</span>
+              </div>
+
+              <div class="block fl bd-bottom bd-right">
+                <img src="img/hubspot-blogs.svg" alt="">
+                <p>4.5M+</p>
+                <span>montly visits</span>
+              </div>
+
+              <div class="block fl bd-bottom bd-right">
+                <img src="img/hubspot-academy.svg" alt="">
+                <p>155K+</p>
+                <span>certified professionals</span>
+              </div>
+
+              <div class="block fl bd-bottom">
+                <img src="img/inbound.svg" alt="">
+                <p>21K+</p>
+                <span>registered attendees</span>
+              </div>
+
+              <div class="block fl bd-right">
+                <img src="img/hubspot-connect.svg" alt="">
+                <p>200+</p>
+                <span>integrations</span>
+              </div>
+
+              <div class="block fl bd-right">
+                <img src="img/globe.svg" alt="">
+                <p>6+</p>
+                <span>languages</span>
+              </div>
+
+              <div class="block fl bd-right">
+                <img src="img/chat-text.svg" alt="">
+                <p>2.6M+</p>
+                <span>social followers</span>
+              </div>
+
+              <div class="block fl">
+                <img src="img/growth-hub.svg" alt="">
+                <p>5K+</p>
+                <span>profiles and counting</span>
+              </div>
+
+            </div>
+          </div>
       </div>
     </header>
   </body>
