aggiunto loghi sotto al gradiente

--- a/index.html
+++ b/index.html
@@ -215,9 +215,24 @@
                 <p>5K+</p>
                 <span>profiles and counting</span>
               </div>
-
             </div>
           </div>
+      </div>
+      <div class="under-gradient container clearfix">
+        <div class="info-customers fl">
+          <span>64,500</span>
+          <p>customers in over <b>100</b> countries growing their businesses with HubSpot</p>
+        </div>
+        <div class="customers-logo fr">
+          <img src="img/wwf.png" alt="">
+          <img src="img/trello.png" alt="">
+          <img src="img/crowd.png" alt="">
+          <img src="img/monkey.svg" alt="">
+          <img src="img/subaru.png" alt="">
+          <img src="img/soundcloud.png" alt="">
+          <img src="img/classpass.png" alt="">
+          <img src="img/vmware.png" alt="">
+        </div>
       </div>
     </header>
   </body>
