aggiunto uomo sotto i loghi e cominciato footer

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
           <h6>Get started with FREE tools, and upgrade as you grow.</h6>
         </div>
       </div>
-
+    </header>
+    <div class="from-header-to-footer">
       <div class="bg-box">
 
           <div class="cube">
@@ -234,6 +235,54 @@
           <img src="img/vmware.png" alt="">
         </div>
       </div>
-    </header>
+      <div class="man container clearfix">
+        <div class="text-man fl">
+          <h2>Start Growing With HubSpot Today</h2>
+          <p>With tools to make every part of your process more human and a support team excited to help you, getting started with inbound has never been easier.</p>
+          <span class="button button-type-b">GetHubspotFree</span>
+          <p>Get started with FREE tools, or get more with our premium software.</p>
+        </div>
+        <div class="img-man fr">
+          <img src="img/man.png" alt="">
+        </div>
+      </div>
+    </div>
+    <footer>
+      <div class="footer-row clearfix container">
+        <div class="footer-box fl">
+          <h5>Increase Your Traffic</h5>
+          <p><a class="a" href="https://www.google.com">Ad Software</a></p>
+          <p><a class="a" href="https://www.google.com">Blog Software</a></p>
+          <p><a class="a" href="https://www.google.com">SEO Software</a></p>
+          <p><a class="a" href="https://www.google.com">Social Media Software</a></p>
+          <p><a class="a" href="https://www.google.com">Content Management System</a></p>
+        </div>
+        <div class="footer-box fl">
+          <h5>Connect With Leads</h5>
+          <p><a class="a" href="https://www.google.com">Find New Prospects</a></p>
+          <p><a class="a" href="https://www.google.com">Email Tracking</a></p>
+          <p><a class="a" href="https://www.google.com">Sales Email Templates</a></p>
+          <p><a class="a" href="https://www.google.com">Click to Call Your Leads</a></p>
+          <p><a class="a" href="https://www.google.com">Email Marketing</a></p>
+        </div>
+        <div class="footer-box fl">
+          <h5>Close and Manage Leads</h5>
+          <p><a class="a" href="https://www.google.com">Document Tracking Tool</a></p>
+          <p><a class="a" href="https://www.google.com">Meeting Schedule Tool</a></p>
+          <p><a class="a" href="https://www.google.com">Sales Automation Tool</a></p>
+          <p><a class="a" href="https://www.google.com">Lead Management Tool</a></p>
+          <p><a class="a" href="https://www.google.com">Pipeline Management Tool</a></p>
+        </div>
+        <div class="footer-box fourth-footer-box fl">
+          <h5>Support and Tools</h5>
+          <p><a class="a" href="https://www.google.com">HubSpot Partners</a></p>
+          <p><a class="a" href="https://www.google.com">Join a Local User Group</a></p>
+          <p><a class="a" href="https://www.google.com">Get a Free Website Report</a></p>
+          <p><a class="a" href="https://www.google.com">HubSpot Templates</a></p>
+          <p><a class="a" href="https://www.google.com">Free Tools & Generators</a></p>
+          <span class="button button-type-c"><a href="https:/www.google.com">Contact HubSpot Support</a></span>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
