aggiunto commenti html e footer

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <title>Hubspot</title>
   </head>
   <body>
+    <!-- header -->
     <header>
+      <!-- first-nav -->
       <div class="first-nav">
         <nav class="container clearfix">
           <div class="fl">
@@ -24,6 +26,9 @@
           </div>
         </nav>
       </div>
+      <!-- /first-nav -->
+
+      <!-- second-nav -->
       <div class="second-nav">
         <nav class="container clearfix">
           <div class="logo fl">
@@ -40,7 +45,9 @@
           </div>
         </nav>
       </div>
+      <!-- /second-nav -->
 
+      <!-- jumbotron -->
       <div class="bg">
         <div class="jumbotron container">
           <h1>There's a better way to grow</h1>
@@ -49,8 +56,13 @@
           <h6>Get started with FREE tools, and upgrade as you grow.</h6>
         </div>
       </div>
+      <!-- /jumbotron -->
     </header>
+    <!-- /header -->
+
+    <!-- from header to footer -->
     <div class="from-header-to-footer">
+      <!-- box sotto header -->
       <div class="bg-box">
 
           <div class="cube">
@@ -247,7 +259,8 @@
         </div>
       </div>
     </div>
-    <footer>
+    <!-- /from header to footer -->
+    <footer class="clearfix">
       <div class="footer-row clearfix container">
         <div class="footer-box fl">
           <h5>Increase Your Traffic</h5>
@@ -281,6 +294,25 @@
           <p><a class="a" href="https://www.google.com">HubSpot Templates</a></p>
           <p><a class="a" href="https://www.google.com">Free Tools & Generators</a></p>
           <span class="button button-type-c"><a href="https:/www.google.com">Contact HubSpot Support</a></span>
+        </div>
+      </div>
+      <div class="lenguages">
+        <span><a class="a" href="https://www.google.com">English</a></span>
+        <span><a class="a" href="https://www.google.com">Deutsch</a></span>
+        <span><a class="a" href="https://www.google.com">中文</a></span>
+        <span><a class="a" href="https://www.google.com">Español</a></span>
+        <span><a class="a" href="https://www.google.com">Portugues</a></span>
+        <span><a class="a" href="https://www.google.com">Français</a></span>
+        <hr class="container">
+      </div>
+      <div class="copyright-privacy container">
+        <div class="fl">
+          <img src="img/hubspot-footer.svg" alt="">
+          <span>Copyright <i class="fa fa-copyright" aria-hidden="true"></i> 2019 HubSpot, Inc.</span>
+        </div>
+        <div class="fr">
+          <span><a class="a" href="https://www.google.com">Legal Stuff</a></span>
+          <span><a class="a" href="https://www.google.com">Privacy Policy</a></span>
         </div>
       </div>
     </footer>
