modifiche buttons ed aggiunta commenti CSS

--- a/index.html
+++ b/index.html
@@ -10,19 +10,21 @@
     <title>Hubspot</title>
   </head>
   <body>
+
     <!-- header -->
     <header>
+
       <!-- first-nav -->
       <div class="first-nav">
         <nav class="container clearfix">
           <div class="fl">
-            <span id="border-right"><a class="a" href="https://www.google.com"><i class="fa fa-globe" aria-hidden="true"></i><div class="link-text">English</div><i class="fa fa-angle-down" aria-hidden="true"></i></a></span>
-            <span id="border-left"><a class="a" href="https://www.google.com">Contact Us</a></span>
+            <span class="border-right"><a class="a" href="https://www.google.com"><i class="fa fa-globe" aria-hidden="true"></i><div class="link-text">English</div><i class="fa fa-angle-down" aria-hidden="true"></i></a></span>
+            <span class="border-left"><a class="a" href="https://www.google.com">Contact Us</a></span>
           </div>
-          <div class="fr">
+          <div class="button-right fr">
             <a href="https://www.google.com"><i class="fa fa-search" aria-hidden="true"></i></a>
-            <span class="button button-type-a"><a href="https://www.google.com">Log in</a></span>
-            <span class="button button-type-b"><a href="https://www.google.com">GetHubspotFree</a></span>
+            <a class="a" href="https://www.google.com"><span class="button button-type-a">Log in</span></a>
+            <a class="a" href="https://www.google.com"><span class="button button-type-b">GetHubspotFree</span></a>
           </div>
         </nav>
       </div>
@@ -52,7 +54,7 @@
         <div class="jumbotron container">
           <h1>There's a better way to grow</h1>
           <h4>Marketing, sales and service software that helps your business grow without compromise. Because "good for the business" should also mean "good for the customee."</h4>
-          <span class="button button-type-b">GetHubspotFree</span>
+          <a class="a" href="https://www.google.com"><span class="button button-type-b">GetHubspotFree</span></a>
           <h6>Get started with FREE tools, and upgrade as you grow.</h6>
         </div>
       </div>
@@ -62,175 +64,189 @@
 
     <!-- from header to footer -->
     <div class="from-header-to-footer">
+
       <!-- box sotto header -->
       <div class="bg-box">
 
-          <div class="cube">
-            <img src="img/cubo.png" alt="">
-            <h2>Powerful alone. Better together</h2>
-            <h5>HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its core. They're powerful alone - but even better when used together.</h5>
-          </div>
+        <!-- blocco con immagine cubo -->
+        <div class="cube">
+          <img src="img/cubo.png" alt="">
+          <h2>Powerful alone. Better together</h2>
+          <h5>HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its core. They're powerful alone &mdash; but even better when used together.</h5>
+        </div>
+        <!-- /blocco con immagine cubo -->
 
-          <div class="box-1 container clearfix shadow">
-            <div class="content-1 fl">
-              <img src="img/libretto.png" alt="">
-              <div class="box-button">
-                <span class="button button-type-b"><a class="a" href="https://www.google.com">Learn More</a></span>
-              </div>
-            </div>
-
-            <div class="content-2 fr">
-              <h4>Free HubSpot CRM</h4>
-              <p>Everything you need to organize, track, and build better relationships with leads and customers. Yes, it's 100% free. Forever.</p>
-              <h5>POPULAR FEATURE</h5>
-              <div class="content-2-list">
-                <img src="img/check-orange.png" alt="">
-                <span>Contact Insight</span>
-              </div>
-
-              <div class="content-2-list">
-                <img src="img/check-orange.png" alt="">
-                <span>Deals</span>
-              </div>
-
-              <div class="content-2-list">
-                <img src="img/check-orange.png" alt="">
-                <span>Task</span>
-              </div>
-
-            </div>
-          </div>
-          <div class="box-2 container clearfix">
-            <div class="content-3 fl shadow">
-              <img src="img/marketing-hub.png" alt="">
-              <h4>Marketing Hub</h4>
-              <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaign at scale.</p>
-              <hr>
-              <h5>POPULAR FEATURE</h5>
-
-              <div class="content-3-list">
-                <img src="img/check-orange.png" alt="">
-                <span>Lead Generation</span>
-              </div>
-              <div class="content-3-list">
-                <img src="img/check-orange.png" alt="">
-                <span>Marketing Automation</span>
-              </div>
-              <div class="content-3-list">
-                <img src="img/check-orange.png" alt="">
-                <span>Analytics</span>
-              </div>
-              <div class="content-3-button">
-                <span class="button button-type-b">Learn More</span>
-              </div>
-            </div>
-
-            <div class="content-4 content-3 fl shadow">
-              <img src="img/sales-hub.png" alt="">
-              <h4>Marketing Hub</h4>
-              <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaign at scale.</p>
-              <hr>
-              <h5>POPULAR FEATURE</h5>
-
-              <div class="content-3-list">
-                <img src="img/check-orange.png" alt="">
-                <span>Lead Generation</span>
-              </div>
-              <div class="content-3-list">
-                <img src="img/check-orange.png" alt="">
-                <span>Marketing Automation</span>
-              </div>
-              <div class="content-3-list">
-                <img src="img/check-orange.png" alt="">
-                <span>Analytics</span>
-              </div>
-              <div class="content-3-button">
-                <span class="button button-type-b">Learn More</span>
-              </div>
-            </div>
-            <div class="content-3 fl shadow">
-
-              <img src="img/service-hub.png" alt="">
-              <h4>Marketing Hub</h4>
-              <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaign at scale.</p>
-              <hr>
-              <h5>POPULAR FEATURE</h5>
-
-              <div class="content-3-list">
-                <img src="img/check-orange.png" alt="">
-                <span>Lead Generation</span>
-              </div>
-              <div class="content-3-list">
-                <img src="img/check-orange.png" alt="">
-                <span>Marketing Automation</span>
-              </div>
-              <div class="content-3-list">
-                <img src="img/check-orange.png" alt="">
-                <span>Analytics</span>
-              </div>
-              <div class="content-3-button">
-                <span class="button button-type-b">Learn More</span>
-              </div>
+        <!-- row blocchi con ombre -->
+        <div class="box-1 container clearfix shadow">
+          <div class="content-1 fl">
+            <img src="img/libretto.png" alt="">
+            <div class="box-button">
+              <a class="a" href="https://www.google.com"><span class="button button-type-b">Learn More</span></a>
             </div>
           </div>
 
-          <div class="gradient-row">
-            <div class="top-text container">
-              <h2>Learn and grow with award-winning support and a thriving community behind you.</h2>
-              <p>You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>
+          <div class="content-2 fr">
+            <h4>Free HubSpot CRM</h4>
+            <p>Everything you need to organize, track, and build better relationships with leads and customers. Yes, it's 100% free. Forever.</p>
+            <h5 class="info-features">POPULAR FEATURE</h5>
+            <div class="content-2-list">
+              <img src="img/check-orange.png" alt="">
+              <span>Contact Insight</span>
             </div>
 
-            <div class="row clearfix container">
-              <div class="block fl bd-bottom bd-right">
-                <img src="img/handshake.svg" alt="">
-                <p>150+</p>
-                <span>HubSpot user groups</span>
-              </div>
+            <div class="content-2-list">
+              <img src="img/check-orange.png" alt="">
+              <span>Deals</span>
+            </div>
 
-              <div class="block fl bd-bottom bd-right">
-                <img src="img/hubspot-blogs.svg" alt="">
-                <p>4.5M+</p>
-                <span>montly visits</span>
-              </div>
+            <div class="content-2-list">
+              <img src="img/check-orange.png" alt="">
+              <span>Task</span>
+            </div>
 
-              <div class="block fl bd-bottom bd-right">
-                <img src="img/hubspot-academy.svg" alt="">
-                <p>155K+</p>
-                <span>certified professionals</span>
-              </div>
+          </div>
+        </div>
+        <!-- /row blocchi con ombre -->
 
-              <div class="block fl bd-bottom">
-                <img src="img/inbound.svg" alt="">
-                <p>21K+</p>
-                <span>registered attendees</span>
-              </div>
+        <!-- blocco free HubSpot CRM -->
+        <div class="box-2 container clearfix">
+          <div class="content-3 fl shadow">
+            <img src="img/marketing-hub.png" alt="">
+            <h4>Marketing Hub</h4>
+            <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaign at scale.</p>
+            <hr>
+            <h5>POPULAR FEATURE</h5>
 
-              <div class="block fl bd-right">
-                <img src="img/hubspot-connect.svg" alt="">
-                <p>200+</p>
-                <span>integrations</span>
-              </div>
-
-              <div class="block fl bd-right">
-                <img src="img/globe.svg" alt="">
-                <p>6+</p>
-                <span>languages</span>
-              </div>
-
-              <div class="block fl bd-right">
-                <img src="img/chat-text.svg" alt="">
-                <p>2.6M+</p>
-                <span>social followers</span>
-              </div>
-
-              <div class="block fl">
-                <img src="img/growth-hub.svg" alt="">
-                <p>5K+</p>
-                <span>profiles and counting</span>
-              </div>
+            <div class="content-3-list">
+              <img src="img/check-orange.png" alt="">
+              <span>Lead Generation</span>
+            </div>
+            <div class="content-3-list">
+              <img src="img/check-orange.png" alt="">
+              <span>Marketing Automation</span>
+            </div>
+            <div class="content-3-list">
+              <img src="img/check-orange.png" alt="">
+              <span>Analytics</span>
+            </div>
+            <div class="content-3-button">
+              <a class="a" href="https://www.google.com"><span class="button button-type-b">Learn More</span></a>
             </div>
           </div>
+
+          <div class="content-4 content-3 fl shadow">
+            <img src="img/sales-hub.png" alt="">
+            <h4>Marketing Hub</h4>
+            <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaign at scale.</p>
+            <hr>
+            <h5>POPULAR FEATURE</h5>
+
+            <div class="content-3-list">
+              <img src="img/check-orange.png" alt="">
+              <span>Lead Generation</span>
+            </div>
+            <div class="content-3-list">
+              <img src="img/check-orange.png" alt="">
+              <span>Marketing Automation</span>
+            </div>
+            <div class="content-3-list">
+              <img src="img/check-orange.png" alt="">
+              <span>Analytics</span>
+            </div>
+            <div class="content-3-button">
+              <a class="a" href="https://www.google.com"><span class="button button-type-b">Learn More</span></a>
+            </div>
+          </div>
+          <div class="content-3 fl shadow">
+
+            <img src="img/service-hub.png" alt="">
+            <h4>Marketing Hub</h4>
+            <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaign at scale.</p>
+            <hr>
+            <h5>POPULAR FEATURE</h5>
+
+            <div class="content-3-list">
+              <img src="img/check-orange.png" alt="">
+              <span>Lead Generation</span>
+            </div>
+            <div class="content-3-list">
+              <img src="img/check-orange.png" alt="">
+              <span>Marketing Automation</span>
+            </div>
+            <div class="content-3-list">
+              <img src="img/check-orange.png" alt="">
+              <span>Analytics</span>
+            </div>
+            <div class="content-3-button">
+              <a class="a" href="https://www.google.com"><span class="button button-type-b">Learn More</span></a>
+            </div>
+          </div>
+        </div>
+        <!-- /blocco free HubSpot CRM -->
+
+        <!-- gradient row -->
+        <div class="gradient-row">
+          <div class="top-text container">
+            <h2>Learn and grow with award-winning support and a thriving community behind you.</h2>
+            <p>You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>
+          </div>
+
+          <div class="row clearfix container">
+            <div class="block fl bd-bottom bd-right">
+              <img src="img/handshake.svg" alt="">
+              <p class="plus">150</p>
+              <span>HubSpot user groups</span>
+            </div>
+
+            <div class="block fl bd-bottom bd-right">
+              <img src="img/hubspot-blogs.svg" alt="">
+              <p>4.5M+</p>
+              <span>montly visits</span>
+            </div>
+
+            <div class="block fl bd-bottom bd-right">
+              <img src="img/hubspot-academy.svg" alt="">
+              <p>155K+</p>
+              <span>certified professionals</span>
+            </div>
+
+            <div class="block fl bd-bottom">
+              <img src="img/inbound.svg" alt="">
+              <p>21K+</p>
+              <span>registered attendees</span>
+            </div>
+
+            <div class="block fl bd-right">
+              <img src="img/hubspot-connect.svg" alt="">
+              <p>200+</p>
+              <span>integrations</span>
+            </div>
+
+            <div class="block fl bd-right">
+              <img src="img/globe.svg" alt="">
+              <p>6+</p>
+              <span>languages</span>
+            </div>
+
+            <div class="block fl bd-right">
+              <img src="img/chat-text.svg" alt="">
+              <p>2.6M+</p>
+              <span>social followers</span>
+            </div>
+
+            <div class="block fl">
+              <img src="img/growth-hub.svg" alt="">
+              <p>5K+</p>
+              <span>profiles and counting</span>
+            </div>
+          </div>
+        </div>
+        <!-- /gradient row -->
+
       </div>
+      <!-- /box sotto header -->
+
+      <!-- blocco sotto blocco gradienti -->
       <div class="under-gradient container clearfix">
         <div class="info-customers fl">
           <span>64,500</span>
@@ -247,6 +263,9 @@
           <img src="img/vmware.png" alt="">
         </div>
       </div>
+      <!-- /blocco sotto blocco gradienti -->
+
+      <!-- blocco immagine uomo -->
       <div class="man container clearfix">
         <div class="text-man fl">
           <h2>Start Growing With HubSpot Today</h2>
@@ -258,9 +277,16 @@
           <img src="img/man.png" alt="">
         </div>
       </div>
+      <!-- /blocco immagine uomo -->
+
     </div>
     <!-- /from header to footer -->
+
+    <!-- footer -->
+
     <footer class="clearfix">
+
+      <!-- link box row footer -->
       <div class="footer-row clearfix container">
         <div class="footer-box fl">
           <h5>Increase Your Traffic</h5>
@@ -296,6 +322,9 @@
           <span class="button button-type-c"><a href="https:/www.google.com">Contact HubSpot Support</a></span>
         </div>
       </div>
+      <!-- /link box row footer -->
+
+      <!-- blocco lingue footer -->
       <div class="lenguages">
         <span><a class="a" href="https://www.google.com">English</a></span>
         <span><a class="a" href="https://www.google.com">Deutsch</a></span>
@@ -305,6 +334,9 @@
         <span><a class="a" href="https://www.google.com">Français</a></span>
         <hr class="container">
       </div>
+      <!-- /blocco lingue footer -->
+
+      <!-- row finale footer -->
       <div class="copyright-privacy container">
         <div class="fl">
           <img src="img/hubspot-footer.svg" alt="">
@@ -315,6 +347,9 @@
           <span><a class="a" href="https://www.google.com">Privacy Policy</a></span>
         </div>
       </div>
+      <!-- /row finale footer -->
+
     </footer>
+    <!-- /footer -->
   </body>
 </html>
